<resources>
    <string name="app_name">Registro de Asistencias COVID-19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Instituto Tecnológico Superior de Lerdo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Crear Clase</string>

    <string name="menu_asistencias">Tomar Asistencias</string>
    <string name="menu_verificar">Verficar Asistencias</string>

    <string name="nodisp">Esta opción aun no esta disponible</string>

    <string name="hintCodMaestro">Codigo de Maestro</string>
    <string name="hintCodAula">Codigo de Aula</string>
    <string name="hintCarrera">Carrera</string>
    <string name="hintSemestre">Semestre</string>
    <string name="hintMateria">Materia</string>
    <string name="hintDuracion">Duración</string>

    <string name="descBtnCodDoc">Aqui se ingresa el codigo perteneciente al docente</string>
    <string name="descBtnCodAul">Aqui se ingresa el codigo perteneciente al aula</string>

    <!--ComboBox Semestre-->
    <string-array name="Semestres">
        <item>Primer Semestre</item>
        <item>Segundo Semestre</item>
        <item>Tercer Semestre</item>
        <item>Cuarto Semestre</item>
        <item>Quinto Semestre</item>
        <item>Sexto Semestre</item>
        <item>Septimo Semestre</item>
        <item>Octavo Semestre</item>
        <item>Noveno Semestre</item>
    </string-array>

    <!--Semestres de Especialidad-->
    <string-array name="SemestresEspecialidad">
        <item>Primer Semestre</item>
        <item>Segundo Semestre</item>
    </string-array>

    <!--Semestres de Maestria-->
    <string-array name="SemestresMaestria">
        <item>Primer Semestre</item>
        <item>Segundo Semestre</item>
        <item>Tercer Semestre</item>
        <item>Cuarto Semestre</item>
    </string-array>

</resources>