<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clase"
            android:icon="@drawable/add"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_asistencia"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_asistencias" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/table"
            android:title="@string/menu_verificar" />

        <item
            android:id="@+id/nav_listaClases"
            android:icon="@drawable/table"
            android:title="Verificar clases" />

    </group>
</menu>