<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_clase">

    <fragment
        android:id="@+id/nav_clase"
        android:name="com.example.registrodeasistenciascovid_19.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_crear_clase" />

    <fragment
        android:id="@+id/nav_asistencia"
        android:name="com.example.registrodeasistenciascovid_19.ui.registrarAsistencia.registrarAsistenciaFragment"
        android:label="@string/menu_asistencias"
        tools:layout="@layout/fragment_registrar_clase" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.registrodeasistenciascovid_19.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_verificar"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_listaClases"
        android:name="com.example.registrodeasistenciascovid_19.ui.listaClases.listaClasesFragment"
        android:label="Verificar Clases"
        tools:layout="@layout/fragment_listaclases" />


</navigation>