<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CodMaestro"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="298dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/CodAula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCodMaestro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hintCodMaestro"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnQR1"
        android:layout_width="48dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/descBtnCodDoc"
        android:layout_marginBottom="23dp"
        android:drawableTop="@drawable/qr_code_scanner_24"
        android:drawableTint="@color/design_default_color_background"
        android:paddingTop="11dp"
        app:layout_constraintBottom_toTopOf="@+id/btnQR2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CodMaestro"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnQR2"
        android:layout_width="48dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/descBtnCodAul"
        android:drawableTop="@drawable/qr_code_scanner_24"
        android:drawableTint="@color/design_default_color_background"
        android:paddingTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CodAula"
        app:layout_constraintTop_toBottomOf="@+id/btnQR1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CodAula"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="298dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CodMaestro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCodAula"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hintCodAula"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCarrera"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtSemestre"
        app:layout_constraintEnd_toEndOf="@+id/txtSemestre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtSemestre"
        app:layout_constraintTop_toBottomOf="@+id/CodAula">

        <AutoCompleteTextView
            android:id="@+id/cboCarreras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintCarrera"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtMateria"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSemestre">

        <AutoCompleteTextView
            android:id="@+id/cboMaterias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintMateria"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtHora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMateria">

        <AutoCompleteTextView
            android:id="@+id/cboDuracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDuracion"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SelHora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMateria">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInicio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Hora de Inicio"
            android:clickable="false"
            android:editable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSemestre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtMateria"
        app:layout_constraintEnd_toEndOf="@+id/txtMateria"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtMateria"
        app:layout_constraintTop_toBottomOf="@+id/txtCarrera">

        <AutoCompleteTextView
            android:id="@+id/cboSemestres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSemestre"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCrearClase"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:text="Crear Clase"
        app:iconTint="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>